--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,16 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.7
+install_requires = 
+    pandas == 1.4.2
+    numpy == 1.21.5
+    polars == 0.16.5
+
+[options.extras_require]
+ds_function =
+    scikit-learn == 1.0.2
+special_function =
+    spark == 0.2.1
 
 [options.packages.find]
 where = src
