initial_comit: dodobi

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = dodobilib
+name = dodobi
 version = 0.0.1
-author = dodobi
+author = bi.service
 author_email = bi.service.account@idodo.cz
 description = dodobi python library
 long_description = file: README.md, LICENSE.txt
